Fixing transition flickering

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,6 +1,7 @@
 @import "./variables";
 
 .container {
+  opacity: 1 !important;
   padding: 8rem 2rem 2rem 2rem;
 }
 
