--- a/styles/Film.module.scss
+++ b/styles/Film.module.scss
@@ -1,6 +1,7 @@
 @import "./variables";
 
 .container {
+  opacity: 1 !important;
   padding-top: 8rem;
   display: flex;
   flex-direction: column;
