--- a/styles/FilmItem.module.scss
+++ b/styles/FilmItem.module.scss
@@ -6,6 +6,7 @@
 }
 
 .filmItemWrapper {
+  opacity: 1 !important;
   width: 100vw;
   min-height: 100vh;
   padding: 0 7vw;
